Fix spacing and position of navbar

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -125,7 +125,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  gap: 4rem;
   height: 40%;
   padding: 1.5rem 1rem 0 2rem;
 }
