--- a/public/stylesheets/sass/components/_navbar.scss
+++ b/public/stylesheets/sass/components/_navbar.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+
+  gap: 4rem;
 
   height: 40%;
   padding: 1.5rem 1rem 0 2rem;
